2004-06-17  Rodney Dawes  <dobey@novell.com>

	* camel-mime-filter-tohtml.c: Add support for the webcal, callto, and
	h323 URIs when we get them in mails

2004-06-17  Jeffrey Stedfast  <fejj@novell.com>

	* camel-mime-filter-tohtml.c: Don't foolishly unmunge From_
	lines. First off, we don't even know if our input stream came from
	an mbox file and secondly, the ">From " may have been intentional
	by the author. We Just Don't Know (tm).

2004-06-15  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-store.c (imap4_build_folder_info):
	Make sure we have elements in the array, if not then we're done
	(return a NULL fi).

2004-06-17  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-folder.c (imap4_get_uid_set): Fixed
	to work properly. It was getting ranges wrong before sometimes
	which was making me lose mail! Ugh.

	Thanks to Christian Kellner for pointing out these bugs (and
	submitting the original patch for service_setv)

	* camel-service.c (service_setv): Don't use (tag &
	CAMEL_ARG_IGNORE) to determine if we should ignore this
	tag. CAMEL_ARG_IGNORE is not a bit flag.

	* providers/imap/camel-imap-store.c (imap_setv): Don't use (tag &
	CAMEL_ARG_IGNORE) to determine if we should ignore this
	tag. CAMEL_ARG_IGNORE is not a bit flag.

2004-06-16  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-folder.c (imap4_refresh_info): Only
	force a re-update of all FLAGS if this folder wasn't in the
	SELECTED state. Otherwise, simply send a NOOP.

	* providers/imap4/camel-imap4-summary.c: Added a 'first' member to
	the imap_fetch_all_t struct so we can use that as a base offset in
	our GPtrArray, allowing us to limit resource consumption which
	could otherwise get quite large. Also added a ChangeInfo member
	that was needed for changes to untagged_fetch_all().
	(imap4_fetch_all_add): Use fetch->first as a base offset and
	change int i to guint32 i. Also updated to sue the fetch->changes.